# Geometry

./: CMakeLists.txt  IDENTIFICATION.txt
app/: .triangulation_2.hpp.swp  delaunay_triangulation.cpp  test_interval.cpp  test_kernel.cpp
include/ra/: interval.hpp  kernel.hpp
